# rust-file-upload-endpoint

./: Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml  rust_formater.yml
files/: lease french finish215.docx
src/: main.rs
