[package]
name = "rust-file-upload-endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "limit", "trace", "cors", "timeout", "add-extension", "catch-panic"] }
hyper = { version = "0.14", default-features = true, features = ["server"] }
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
async-trait = "0.1" 
tera = "1.0"